# battle-type

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dictionary  main.c
alphas/: allegro1.c  allegro1.h  buttons.c  buttons.h
alphas/allegro_samples/: enet_common.h  ex_enet_client.c  ex_enet_client.h  ex_enet_server.c  ex_enet_server.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: private.xml
resources/: font.h
src/: battleship.c  battleship.h  buttons.c  buttons.h  client.c  client.h  enet_common.h  game.c  game.h  main.c  main.h  menu_screen.c  menu_screen.h  network_utils.c  network_utils.h  rank.c  rank.h  server.c  server.h  sha256.h  utils.c  utils.h
src/resources/: dictionary.h
